2010-08-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m86-1:
	- new snapshot
	- add buildfix for x86_64
	- drop another buildfix

2010-07-23 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m85-1:
	- new snapshot
	- add patch to build with system libmythes
	- drop merging the install dirs to stay upstream

2010-07-17 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m84-1:
	- disable PYTHONPATH changes in profile file
	- remove system-mythes patch that went upstream
	- explicitly point to internal mdds
	
2010-06-18 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m83-1:
	- new snapshot
	- apply fix from http://www.openoffice.org/issues/show_bug.cgi?id=111141
	  for broken i686 internal cppunit

2010-06-13 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m82-1:
	- new snapshot
	- build still broken

2010-06-10 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m81-1:
	- new snapshot
	- build broken http://www.openoffice.org/issues/show_bug.cgi?id=111990

2010-06-01 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m80-1:
	- new snapshot
	- rework deps/optdeps taken from -beta pkg
	- use system libmythes, redland, cppunint, unixodbc
	- add junit makedep
	- build broken

2010-04-24 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m77-1:
	- new snapshot
	- fall back to internal saxon - see
	  http://qa.openoffice.org/issues/show_bug.cgi?id=110136
	- add gcc4.5 fixes
	- add a buildfix
	- use system graphite for i686 again
	- use internal cppunit for both architectures

2010-04-12 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m76-1:
	- new snapshot
	- use xz compression for source
	
2010-03-21 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m75-2:
	use internal redland/rasqal/raptor

2010-03-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m75-1:
	- new snapshot
