@@ -1,3 +1,12 @@
+2010-09-05 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3_dev300_m87-1:
+	- new snapshot
+	- move addional sources into src array for clean chroot builds
+	- rework deps for clean chroot builds
+	- Enhance user painting capabilities during slideshow --enable-presenter-extra-ui
+
+
 2010-08-11 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3_dev300_m86-1:
